Made some transition revisions and improvements. Updated to the latest Nuxt. Revised some component usage naming to be more in line with best practices. Small grid position fix for the menu, as well as font size increase. Fixed a max width bug with the main logo on big screens. Shifted the vertical tagline a bit to be centered with the logo.

--- a/client/assets/scss/patterns/_header.scss
+++ b/client/assets/scss/patterns/_header.scss
@@ -34,6 +34,7 @@
 
   .logo-link {
     grid-area: logo;
+    max-width: 22rem;
   }
 
   .menu--main {
