--- a/client/assets/scss/patterns/_menu.scss
+++ b/client/assets/scss/patterns/_menu.scss
@@ -1,13 +1,12 @@
-// 
+//
 // Menus
-// 
+//
 
 .menu {
   display: flex;
-  align-items: center;
   justify-content: center;
   margin-left: auto;
-  font: 700 1.6rem/2 $overpass-mono;
+  font: 700 2rem/2 $overpass-mono;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: $char-spacing;
@@ -17,12 +16,12 @@
     @include list-reset;
   }
 
-  li, a {
+  li,
+  a {
     display: block;
   }
 
   li {
-
     @for $i from 1 through length($colors-site) {
       $c: nth($colors-site, $i);
 
@@ -60,13 +59,10 @@
         height: 3px;
         will-change: transform, background;
         transform: scaleX(0) scaleY(1);
-        transition:
-          transform 300ms $base-easing,
-          background 300ms $base-easing;
+        transition: transform 300ms $base-easing, background 300ms $base-easing;
       }
 
       &.nuxt-link-active {
-
         &:after {
           transform: scaleX(0.5) scaleY(1);
         }
@@ -76,27 +72,25 @@
 
   @media (max-width: 799px) {
     position: fixed;
-    top: 0; left: 0;
+    top: 0;
+    left: 0;
     z-index: 1000;
+    align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: rgba($mid, .96);
+    background-color: rgba($mid, 0.96);
     font-size: 4rem;
     opacity: 0;
     visibility: hidden;
     will-change: transform, opacity, visibility;
-    transition:
-      visibility 300ms $base-easing,
-      transform 300ms $base-easing,
+    transition: visibility 300ms $base-easing, transform 300ms $base-easing,
       opacity 300ms $base-easing;
     transform-origin: center;
     transform: scale(0.85) translateY(2rem);
 
     li {
       will-change: opacity, transform;
-      transition:
-        opacity 300ms $base-easing,
-        transform 300ms $base-easing;
+      transition: opacity 300ms $base-easing, transform 300ms $base-easing;
       opacity: 0;
       transform: translateY(-2rem);
 
@@ -142,11 +136,11 @@
   #hamburger {
     display: block;
     position: fixed;
-    top: 0.5rem; right: 0.5rem;
+    top: 0.5rem;
+    right: 0.5rem;
     z-index: 1001;
 
     &.is-active {
-
       .hamburger-inner,
       .hamburger-inner:before,
       .hamburger-inner:after {
