--- a/client/assets/scss/patterns/_page-transitions.scss
+++ b/client/assets/scss/patterns/_page-transitions.scss
@@ -1,12 +1,18 @@
-// 
+//
 // Page transitions
-// 
+//
 
-$base-transform: 12rem;
+$base-transform: 9rem;
 
 .page-enter-active,
 .page-leave-active {
-  transition: opacity .5s;
+  transition: opacity 0.5s cubic-bezier(0.62, 0.26, 0.02, 0.87);
+}
+
+.brush.title {
+  transition: opacity 0.5s cubic-bezier(0.62, 0.26, 0.02, 0.87),
+    transform 0.5s cubic-bezier(0.62, 0.26, 0.02, 0.87);
+  transition-delay: 0.2s;
 }
 
 .page-enter,
@@ -17,11 +23,21 @@ $base-transform: 12rem;
 .slide-left-enter,
 .slide-right-leave-active {
   opacity: 0;
-  transform: translate(#{$base-transform}, 0);
+  transform: translate(0, #{$base-transform});
+
+  .brush.title {
+    opacity: 0;
+    transform: translate(#{$base-transform}, 0);
+  }
 }
 
 .slide-left-leave-active,
 .slide-right-enter {
   opacity: 0;
-  transform: translate(-#{$base-transform}, 0);
+  transform: translate(0, -#{$base-transform});
+
+  .brush.title {
+    opacity: 0;
+    transform: translate(-#{$base-transform}, 0);
+  }
 }
