--- a/client/assets/scss/patterns/_structure.scss
+++ b/client/assets/scss/patterns/_structure.scss
@@ -2,7 +2,8 @@
 // Structure
 //
 
-html, body {
+html,
+body {
   margin: 0;
 }
 
@@ -41,23 +42,18 @@ body {
 }
 
 .content {
-	min-height: 450px;
-  padding:
-    $global-component-padding
-    $global-component-padding
-    ($global-component-padding * 3)
-    $global-component-padding;
+  min-height: 450px;
+  padding: $global-component-padding $global-component-padding
+    ($global-component-padding * 3) $global-component-padding;
 }
 
 .page-content {
   will-change: opacity, transform;
-  transition:
-    opacity .5s cubic-bezier(.55,0,.1,1),
-    transform .5s cubic-bezier(.55,0,.1,1);
+  transition: opacity 0.5s cubic-bezier(0.55, 0, 0.1, 1),
+    transform 0.5s cubic-bezier(0.55, 0, 0.1, 1);
 }
 
 .page-footer__email-link {
-
   > svg {
     margin-right: 10px;
   }
@@ -65,11 +61,10 @@ body {
 
 @media (min-width: 1140px) {
   .page-wrapper {
-
     &:before {
       position: absolute;
       top: 25rem;
-      left: 13rem;
+      left: 15rem;
       display: block;
       content: attr(data-floating-label);
       font-family: $overpass-mono;
